--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">AwesomeApp</string>
     <string name="empty_data">Empty data!</string>
+    <string name="can_not_load_image">Can not load image, check internet Connection!</string>
 </resources>
